--- a/faangapp/static/css/style.css
+++ b/faangapp/static/css/style.css
@@ -34,38 +34,6 @@ h1, h2, h3, h4, h5, h6 {
   margin: 0;
 }
 
-.legend {
-  padding: 10px;
-  font-family: Sanchez, serif;
-  font-size: 16px;
-  font-weight: bold;
-  line-height: 18px;
-  color: #555;
-  background-color: white;
-  border-radius: 5px;
-  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
-}
-
-.legend .low {
-  color: #ec8a2e;
-}
-
-.legend .empty {
-  color: #a0353a;
-}
-
-.legend .coming-soon {
-  color: #f4ba48;
-}
-
-.legend .healthy {
-  color: #1b904f;
-}
-
-.legend .out-of-order {
-  color: #007dff;
-}
-
 /*--------------------------------------------------------------
 # Back to top button
 --------------------------------------------------------------*/
@@ -448,7 +416,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: calc(100vh - 110px);
-  background: url("../img/hero-bg.jpg");
+  background: url("hero-bg.jpg") top center;
   background-size: cover;
   position: relative;
 }
@@ -756,7 +724,7 @@ section {
 # Cta
 --------------------------------------------------------------*/
 .cta {
-  background: linear-gradient(rgba(2, 2, 2, 0.5), rgba(0, 0, 0, 0.5)), url("../img/cta-bg.jpg") fixed center center;
+  background: linear-gradient(rgba(2, 2, 2, 0.5), rgba(0, 0, 0, 0.5)), url("{{ url_for('assets', filename='image/cta-bg.jpg') }}") fixed center center;
   background-size: cover;
   padding: 120px 0;
 }
