--- a/faangapp/templates/index.html
+++ b/faangapp/templates/index.html
@@ -365,7 +365,7 @@
               <p>Offices</p>
               <a href="static/assets/img/portfolio/office parsing.PNG" data-gallery="portfolioGallery"
                 class="portfolio-lightbox preview-link"
-                title="I had a lot of difficulties with a website that constantly asked me to sign in after the second page. This code block recursively pull the office locations while constanly signing me in with each page "><i
+                title="I had a lot of difficulties with a website that constantly asked me to sign in after the second page. This code block recursively pulls the office locations while constanly signing me in with each page "><i
                   class="bx bx-plus"></i></a>
               <a href="https://github.com/markrotil/baringfaang/blob/main/faangapp/ETL/Transform/office_locations/office_locations.ipynb"
                 target="_blank" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
@@ -384,11 +384,11 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <img src="assets/img/portfolio/coordinates.PNG" class="img-fluid" alt="">
+            <img src="static/assets/img/portfolio/coordinates.PNG" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Getting Lat/Long</h4>
               <p>Offices</p>
-              <a href="assets/img/portfolio/coordinates.PNG" data-gallery="portfolioGallery"
+              <a href="static/assets/img/portfolio/coordinates.PNG" data-gallery="portfolioGallery"
                 class="portfolio-lightbox preview-link"
                 title="This was the most time consuming part of the project as there was no way of getting the coordinates via looping. So all the lat/long found in my code is from looking each location up. Finding the coordiantes for the hidden offices was also difficult."><i
                   class="bx bx-plus"></i></a>
