--- a/faangapp/templates/index.html
+++ b/faangapp/templates/index.html
@@ -73,7 +73,7 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
+          <li><a class="nav-link scrollto active" href="/">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">The Goal</a></li>
           <li><a class="nav-link scrollto" href="#services">The Companies</a></li>
           <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li>
@@ -95,9 +95,9 @@
                   <li><a href="https://jobs.netflix.com/" target="_blank">Netflix</a></li>
                 </ul>
               </li>
-              <li><a href="#">Facebook Prophet</a></li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
+              <li><a href="/fbproph">Facebook Prophet</a></li>
+              <li><a href="/dashboards">DashBoards</a></li>
+              <li><a href="#">Extra Content</a></li>
             </ul>
           </li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
@@ -140,11 +140,13 @@
               <li><i class="bi bi-check-circle"></i> the flunctuation of stock prices.</li>
               <li><i class="bi bi-check-circle"></i> And Current Number of job oppertunites available</li>
             </ul>
+            <h3>What is Faang?</h3>
             <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-              voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-              culpa qui officia deserunt mollit anim id est laborum
+              FAANG refers to the five prominent American technology companies: Facebook, Amazon, Apple, Netflix, and
+              Alphabet (GOOG). The term was coined by Jim Cramer, the television host of CNBC's Mad Money in
+              2013, calling these companies "totally dominant in their markets." Until 2017, FANG was limited to
+              Facebook, Amazon, Netflix, and Alphabet. Another variant of this acronym is "FANGAM," which includes
+              Microsoft.
             </p>
           </div>
         </div>
@@ -196,8 +198,6 @@
 
           <div class="col-lg-2 col-md-4 col-6">
             <img src="static\assets\img\clients\amazon.png" class="img-fluid" alt="">
-            <a href="https://www.facebook.com"></a>
-
           </div>
 
           <div class="col-lg-2 col-md-4 col-6">
