--- a/faangapp/static/css/style.css
+++ b/faangapp/static/css/style.css
@@ -724,7 +724,7 @@ section {
 # Cta
 --------------------------------------------------------------*/
 .cta {
-  background: linear-gradient(rgba(2, 2, 2, 0.5), rgba(0, 0, 0, 0.5)), url("{{ url_for('assets', filename='image/cta-bg.jpg') }}") fixed center center;
+  background: linear-gradient(rgba(2, 2, 2, 0.5), rgba(0, 0, 0, 0.5)), url("{{ url_for('static', filename='js/map.js') }}") fixed center center;
   background-size: cover;
   padding: 120px 0;
 }
@@ -1416,4 +1416,11 @@ section {
   #footer .footer-top .footer-info {
     margin: -20px 0 30px 0;
   }
+}
+
+.grid {
+  display: flex;
+  flex-wrap: wrap;
+  width: 1200px;
+  height: 1000px;
 }
