--- a/faangapp/templates/index3.html
+++ b/faangapp/templates/index3.html
@@ -111,50 +111,56 @@
 
     <!-- ======= Hero Section ======= -->
 
+    <body>
 
-    <main id="main">
+        <main id="main">
+
+            <div class="grid">
+            </div>
 
 
 
-        <!-- Vendor JS Files -->
-        <script src="static\assets\vendor\aos\aos.js"></script>
-        <script src="static\assets\vendor\bootstrap\js\bootstrap.bundle.min.js"></script>
-        <script src="static\assets\vendor\glightbox\js\glightbox.min.js"></script>
-        <script src="static\assets\vendor\isotope-layout\isotope.pkgd.min.js"></script>
-        <script src="static\assets\vendor\php-email-form\validate.js"></script>
-        <script src="static\assets\vendor\swiper\swiper-bundle.min.js"></script>
 
-        <!-- Bootsrtap -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
-            crossorigin="anonymous"></script>
+            <!-- Vendor JS Files -->
+            <script src="static\assets\vendor\aos\aos.js"></script>
+            <script src="static\assets\vendor\bootstrap\js\bootstrap.bundle.min.js"></script>
+            <script src="static\assets\vendor\glightbox\js\glightbox.min.js"></script>
+            <script src="static\assets\vendor\isotope-layout\isotope.pkgd.min.js"></script>
+            <script src="static\assets\vendor\php-email-form\validate.js"></script>
+            <script src="static\assets\vendor\swiper\swiper-bundle.min.js"></script>
 
-        <!-- D3 -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.5.0/d3.min.js"></script>
+            <!-- Bootsrtap -->
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+                integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
+                crossorigin="anonymous"></script>
 
-        <!-- MomentJS -->
-        <script type="text/javascript"
-            src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.15.1/moment.min.js"></script>
+            <!-- D3 -->
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.5.0/d3.min.js"></script>
 
-        <!-- Leaflet JS -->
-        <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
-            integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
-            crossorigin=""></script>
+            <!-- MomentJS -->
+            <script type="text/javascript"
+                src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.15.1/moment.min.js"></script>
 
-        <!-- polyfill.io is library for using newer JavaScript features in older browers (such as Object.assign) -->
-        <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
+            <!-- Leaflet JS -->
+            <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
+                integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
+                crossorigin=""></script>
 
-        <!-- API key -->
-        <script type="text/javascript" src="static/js/config.js"></script>
+            <!-- polyfill.io is library for using newer JavaScript features in older browers (such as Object.assign) -->
+            <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
 
-        <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
+            <!-- API key -->
+            <script type="text/javascript" src="static/js/config.js"></script>
 
-        <!-- Template Main JS File -->
-        <script src="static\assets\js\main.js"></script>
-        <script src="{{ url_for('static', filename='js/main.js') }}"></script>
-        <script src="{{ url_for('static', filename='js/employees.js') }}"></script>
-        <script src="{{ url_for('static', filename='js/map.js') }}"></script>
+            <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
 
-</body>
+            <!-- Template Main JS File -->
+            <script src="static\assets\js\main.js"></script>
+            <script src="{{ url_for('static', filename='js/main.js') }}"></script>
+            <script src="{{ url_for('static', filename='js/employees.js') }}"></script>
+            <script src="{{ url_for('static', filename='js/map.js') }}"></script>
+            <script src="{{ url_for('static', filename='js/game.js') }}"></script>
+
+    </body>
 
 </html>
