--- a/faangapp/templates/map.html
+++ b/faangapp/templates/map.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Citi Bike</title>
+    <title>Map Example</title>
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Sanchez" rel="stylesheet">
