--- a/faangapp/templates/inner-page.html
+++ b/faangapp/templates/inner-page.html
@@ -58,36 +58,42 @@
   </section>
 
   <!-- ======= Header ======= -->
+  <!-- ======= Header ======= -->
   <header id="header" class="d-flex align-items-center">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <h1 class="logo"><a href="index.html">Day</a></h1>
+      <h1 class="logo"><a href="index.html"></a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+      <a href="index.html" class="logo"><img src="BaringFang\static\assets\img\faang image.jpg" alt=""
+          class="img-fluid"></a>
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto " href="#hero">Home</a></li>
-          <li><a class="nav-link scrollto" href="#about">About</a></li>
-          <li><a class="nav-link scrollto" href="#services">Services</a></li>
+          <li><a class="nav-link scrollto active" href="/">Home</a></li>
+          <li><a class="nav-link scrollto" href="#about">The Goal</a></li>
+          <li><a class="nav-link scrollto" href="#services">The Companies</a></li>
           <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li>
           <li><a class="nav-link scrollto" href="#pricing">Pricing</a></li>
           <li><a class="nav-link scrollto" href="#team">Team</a></li>
-          <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a href="#"><span>More Options</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="#">Drop Down 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
+              <li><a href="/map" target="_blank">Office Map</a></li>
+              <li class="dropdown"><a href="#"><span>Job Oppertunities</span> <i class="bi bi-chevron-right"></i></a>
                 <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
+                  <li><a href="https://www.amazon.jobs/en/" target="_blank">Amazon</a></li>
+                  <li><a href="https://www.apple.com/jobs/ca/" target="_blank">Apple</a></li>
+                  <li><a href="https://www.facebook.com/careers/jobs/" target="_blank">Facebook</a></li>
+                  <li><a
+                      href="https://careers.google.com/jobs/results/?company=Google&company=Google%20Fiber&company=YouTube&employment_type=FULL_TIME&gclid=CjwKCAjwgOGCBhAlEiwA7FUXkgy60OG1JfoSlOLTvuRGa-zke9LBGVOsFRuTMR6rkgnZNIA8rGi7NRoCCp8QAvD_BwE&gclsrc=aw.ds&hl=en_US&jlo=en_US&location=Canada&q=&sort_by=relevance&src=Online%2FHouse%20Ads%2FBKWS"
+                      target="_blank">Google</a>
+                  </li>
+                  <li><a href="https://careers.microsoft.com/us/en" target="_blank">Microsoft</a></li>
+                  <li><a href="https://jobs.netflix.com/" target="_blank">Netflix</a></li>
                 </ul>
               </li>
-              <li><a href="#">Drop Down 2</a></li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
+              <li><a href="/fbproph">Facebook Prophet</a></li>
+              <li><a href="/dashboards">DashBoards</a></li>
+              <li><a href="#">Extra Content</a></li>
             </ul>
           </li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
