--- a/faangapp/templates/dashboard.html
+++ b/faangapp/templates/dashboard.html
@@ -73,7 +73,7 @@
 
             <nav id="navbar" class="navbar">
                 <ul>
-                    <li><a class="nav-link scrollto active" href="/">Home</a></li>
+                    <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
                     <li><a class="nav-link scrollto" href="#about">The Goal</a></li>
                     <li><a class="nav-link scrollto" href="#services">The Companies</a></li>
                     <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li>
@@ -96,9 +96,9 @@
                                     <li><a href="https://jobs.netflix.com/" target="_blank">Netflix</a></li>
                                 </ul>
                             </li>
-                            <li><a href="/fbproph">Facebook Prophet</a></li>
-                            <li><a href="/dashboards">DashBoards</a></li>
-                            <li><a href="#">Extra Content</a></li>
+                            <li><a href="#">Facebook Prophet</a></li>
+                            <li><a href="#">Drop Down 3</a></li>
+                            <li><a href="#">Drop Down 4</a></li>
                         </ul>
                     </li>
                     <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
