--- a/faangapp/templates/prophet.html
+++ b/faangapp/templates/prophet.html
@@ -53,6 +53,14 @@
 </head>
 
 <body>
+    <!-- ======= Top Bar ======= -->
+    <section id="topbar" class="d-flex align-items-center">
+        <div class="container d-flex justify-content-center justify-content-md-between">
+            <div class="contact-info d-flex align-items-center">
+            </div>
+        </div>
+    </section>
+
     <!-- ======= Header ======= -->
     <header id="header" class="d-flex align-items-center">
         <div class="container d-flex align-items-center justify-content-between">
@@ -68,8 +76,6 @@
                     <li><a class="nav-link scrollto" href="#about">The Goal</a></li>
                     <li><a class="nav-link scrollto" href="#services">The Companies</a></li>
                     <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li>
-                    <li><a class="nav-link scrollto" href="#pricing">Pricing</a></li>
-                    <li><a class="nav-link scrollto" href="#team">Team</a></li>
                     <li class="dropdown"><a href="#"><span>More Options</span> <i class="bi bi-chevron-down"></i></a>
                         <ul>
                             <li><a href="/map" target="_blank">Office Map</a></li>
@@ -99,7 +105,6 @@
 
         </div>
     </header><!-- End Header -->
-
     <!-- ======= Top Bar ======= -->
     <section id="topbar" class="d-flex align-items-center">
         <div class="container d-flex justify-content-center justify-content-md-between">
