--- a/faangapp/templates/dashboard.html
+++ b/faangapp/templates/dashboard.html
@@ -62,6 +62,14 @@
         </div>
     </section>
 
+    <!-- ======= Top Bar ======= -->
+    <section id="topbar" class="d-flex align-items-center">
+        <div class="container d-flex justify-content-center justify-content-md-between">
+            <div class="contact-info d-flex align-items-center">
+            </div>
+        </div>
+    </section>
+
     <!-- ======= Header ======= -->
     <header id="header" class="d-flex align-items-center">
         <div class="container d-flex align-items-center justify-content-between">
@@ -73,12 +81,10 @@
 
             <nav id="navbar" class="navbar">
                 <ul>
-                    <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
+                    <li><a class="nav-link scrollto active" href="/">Home</a></li>
                     <li><a class="nav-link scrollto" href="#about">The Goal</a></li>
                     <li><a class="nav-link scrollto" href="#services">The Companies</a></li>
                     <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li>
-                    <li><a class="nav-link scrollto" href="#pricing">Pricing</a></li>
-                    <li><a class="nav-link scrollto" href="#team">Team</a></li>
                     <li class="dropdown"><a href="#"><span>More Options</span> <i class="bi bi-chevron-down"></i></a>
                         <ul>
                             <li><a href="/map" target="_blank">Office Map</a></li>
@@ -96,9 +102,9 @@
                                     <li><a href="https://jobs.netflix.com/" target="_blank">Netflix</a></li>
                                 </ul>
                             </li>
-                            <li><a href="#">Facebook Prophet</a></li>
-                            <li><a href="#">Drop Down 3</a></li>
-                            <li><a href="#">Drop Down 4</a></li>
+                            <li><a href="/fbproph">Facebook Prophet</a></li>
+                            <li><a href="/dashboards">DashBoards</a></li>
+                            <li><a href="#">Extra Content</a></li>
                         </ul>
                     </li>
                     <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
