--- a/faangapp/templates/index.html
+++ b/faangapp/templates/index.html
@@ -161,25 +161,45 @@
           <div class="col-lg-4" data-aos="fade-up">
             <div class="box">
               <span>01</span>
-              <h4>Lorem Ipsum</h4>
-              <p>Ulamco laboris nisi ut aliquip ex ea commodo consequat. Et consectetur ducimus vero placeat</p>
+              <h4>ETL</h4>
+              <ul>
+                <li>Python</li>
+                <li>Pandas(Jupyter Notebook)</li>
+                <li>Google Collab</li>
+                <li>SQLAlchemy</li>
+                <li>Microsoft Azure</li>
+                <li>Elephant SQL</li>
+                <li>Facebook Prophet</li>
+                <li></li>
+              </ul>
             </div>
           </div>
 
           <div class="col-lg-4 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="150">
             <div class="box">
               <span>02</span>
-              <h4>Repellat Nihil</h4>
-              <p>Dolorem est fugiat occaecati voluptate velit esse. Dicta veritatis dolor quod et vel dire leno para
-                dest</p>
+              <h4>Visuals</h4>
+              <ul>
+                <li>HTML5</li>
+                <li>Javascript</li>
+                <li>Leaflet/Mapbox</li>
+                <li>Plotly</li>
+                <li>D3</li>
+                <li>Bootstrap(Provided by Bootstrap Made)</li>
+                <li>PowerBI</li>
+                <li></li>
+              </ul>
             </div>
           </div>
 
           <div class="col-lg-4 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="300">
             <div class="box">
               <span>03</span>
-              <h4> Ad ad velit qui</h4>
-              <p>Molestiae officiis omnis illo asperiores. Aut doloribus vitae sunt debitis quo vel nam quis</p>
+              <h4>Public Release</h4>
+              <ul>
+                <li>Flask</li>
+                <li>Heroku</li>
+              </ul>
             </div>
           </div>
 
@@ -418,15 +438,15 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <img src="static/assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
+            <img src="static/assets/img/portfolio/mapcaputre.PNG" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Mapping</h4>
               <p>Offices</p>
-              <a href="assets/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery"
+              <a href="static/assets/img/portfolio/mapcaputre.PNG" data-gallery="portfolioGallery"
                 class="portfolio-lightbox preview-link"
                 title="Gettign the map to look exacly what I want is a challenge. This part is currently a work in progress"><i
                   class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+
             </div>
           </div>
 
