--- a/faangapp/templates/index.html
+++ b/faangapp/templates/index.html
@@ -438,7 +438,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <img src="static/assets/img/portfolio/mapcaputre.PNG" class="img-fluid" alt="">
+            <img src="static\assets\img\portfolio\mapcapture.PNG" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Mapping</h4>
               <p>Offices</p>
