--- a/faangapp/templates/index.html
+++ b/faangapp/templates/index.html
@@ -95,7 +95,7 @@
               </li>
               <li><a href="/fbproph">Facebook Prophet</a></li>
               <li><a href="/dashboards">DashBoards</a></li>
-              <li><a href="https://markrotil.github.io/matching/">Extra Content</a></li>
+              <li><a href="https://markrotil.github.io/matching/" target="_blank">Extra Content</a></li>
             </ul>
           </li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
