--- a/faangapp/templates/game.html
+++ b/faangapp/templates/game.html
@@ -1,20 +1,16 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-
-<head>
-    <meta charset="UTF-8">
-    <title>Memory Game</title>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='css/game.css') }}">
-    <script src="{{ url_for('static', filename='js/map.js') }}" charset="utf-8"></script>
-</head>
-
-<body>
-
-    <h3>Score:<span id="result"></span></h3>
-
-    <div class="grid">
-    </div>
-
-</body>
-
-</html>
+'<table border="1" class="dataframe" <thead <tr style="text-align: right;" <th>
+    </th <th>Company</th <th>
+    Number_of_Offices</th <th>Revenue_2019(Millions)</th <th>Revenue_2020(Millions)</th <th>
+    Employees(2019)</th <th>Employees(2020)</th <th>Job_Oppertunities</th <th>Stocks_Dec_2019</th>
+    <th>Stocks_Dec_2020</th </tr </thead <tbody <tr <th>0</th <td>Amazon</td <td>233
+    </td <td>45379.01</td <td>51448.51</td <td>798000</td <td>1298000</td <td>49705</td <td>
+    1847.84</td <td>3185.27</td </tr <tr <th>1</th <td>Apple</td <td>26</td <td>
+    95868.86</td <td>102347.86</td <td>137000</td <td>147000</td <td>645</td <td>72.68</td <td>130.76</td </tr <tr <th>2
+    </th <td>Facebook</td <td>85</td <td>20812.72</td <td>
+    25735.48</td <td>44942</td <td>58604</td <td>3257</td <td>205.25</td <td>268.11</td </tr <tr <th>3</th <td>Netflix
+    </td <td>13</td <td>5290.15</td <td>6668.76</td <td>8600</td>
+    <td>9400</td <td>506</td <td>323.31</td <td>514.48</td </tr <tr <th>4</th <td>Google
+    </td <td>85</td <td>45379.01</td <td>51448.51</td <td>118899</td <td>235301</td <td>3591
+    </td <td>1337.02</td <td>1758.72</td </tr <tr <th>5</th <td>Microsoft</td <td>177</td>
+    <td>38217.45</td <td>42530.91</td <td>144000</td <td>163000</td <td>8019</td <td>155.69
+    </td <td>220.51</td </tr </tbody</table>'
