--- a/faangapp/templates/index.html
+++ b/faangapp/templates/index.html
@@ -76,7 +76,7 @@
           <li><a class="nav-link scrollto active" href="/">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">The Goal</a></li>
           <li><a class="nav-link scrollto" href="#services">The Companies</a></li>
-          <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li>
+          <li><a class="nav-link scrollto " href="#portfolio">Issues</a></li>
           <li class="dropdown"><a href="#"><span>More Options</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="/map" target="_blank">Office Map</a></li>
@@ -95,10 +95,11 @@
               </li>
               <li><a href="/fbproph">Facebook Prophet</a></li>
               <li><a href="/dashboards">DashBoards</a></li>
+              <li><a href="/consensus">Consensus</a></li>
               <li><a href="https://markrotil.github.io/matching/" target="_blank">Extra Content</a></li>
             </ul>
           </li>
-          <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
+          <li><a class="nav-link scrollto" href="https://markrotil.github.io/markrotil.io/">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -128,14 +129,14 @@
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right">
             <h3>Our Goals into this Data Dive</h3>
             <p class="font-italic">
-              A Project that compares statsical data between 6 of the bigget Tech Companies. Seeing as it is unfair to
+              A Project that compares statistical data between 6 of the bigget Tech Companies. Seeing as it is unfair to
               compare these companies that specialize in different fields strictly by "the biggest number" we will
-              analyze growth under the follwoing categories:
+              analyze growth under the following categories:
             </p>
             <ul>
               <li><i class="bi bi-check-circle"></i> Offices to employees ratio</li>
               <li><i class="bi bi-check-circle"></i> Revenue growth rates.</li>
-              <li><i class="bi bi-check-circle"></i> the flunctuation of stock prices.</li>
+              <li><i class="bi bi-check-circle"></i> The flunctuation of stock prices.</li>
               <li><i class="bi bi-check-circle"></i> And Current Number of job oppertunites available</li>
             </ul>
             <h3>What is Faang?</h3>
@@ -168,9 +169,9 @@
                 <li>Google Collab</li>
                 <li>SQLAlchemy</li>
                 <li>Microsoft Azure</li>
-                <li>Elephant SQL</li>
+                <li>Elephant SQL(VIA AWS)</li>
+                <li>Postgres SQL</li>
                 <li>Facebook Prophet</li>
-                <li></li>
               </ul>
             </div>
           </div>
@@ -187,7 +188,7 @@
                 <li>D3</li>
                 <li>Bootstrap(Provided by Bootstrap Made)</li>
                 <li>PowerBI</li>
-                <li></li>
+                <li>CSS</li>
               </ul>
             </div>
           </div>
@@ -339,7 +340,7 @@
     </section><!-- End Services Section -->
 
     <!-- ======= Cta Section ======= -->
-    <section id="cta" class="cta">
+    <!--<section id="cta" class="cta">
       <div class="container" data-aos="zoom-in">
 
         <div class="text-center">
@@ -350,7 +351,7 @@
           <a class="cta-btn" href="#">Call To Action</a>
         </div>
 
-      </div>
+      </div>-->
     </section><!-- End Cta Section -->
 
     <!-- ======= Portfolio Section ======= -->
@@ -358,9 +359,9 @@
       <div class="container">
 
         <div class="section-title">
-          <span>Portfolio</span>
-          <h2>Portfolio</h2>
-          <p>Sit sint consectetur velit quisquam cupiditate impedit suscipit alias</p>
+          <span>Issues</span>
+          <h2>Issues</h2>
+          <p>A few problems I ran into while creating the web appplication</p>
         </div>
 
         <div class="row" data-aos="fade-up">
@@ -368,8 +369,7 @@
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
               <li data-filter=".filter-app">Offices</li>
-              <li data-filter=".filter-card">Card</li>
-              <li data-filter=".filter-web">Web</li>
+              <li data-filter=".filter-card">Data</li>
             </ul>
           </div>
         </div>
@@ -390,17 +390,6 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <img src="static/assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Web 3</h4>
-              <p>Web</p>
-              <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery"
-                class="portfolio-lightbox preview-link" title="Web 3"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-            </div>
-          </div>
-
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <img src="static/assets/img/portfolio/coordinates.PNG" class="img-fluid" alt="">
             <div class="portfolio-info">
@@ -416,26 +405,16 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="static/assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
+            <img src="static/assets/img/portfolio/statista.JPG" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Card 2</h4>
-              <p>Card</p>
-              <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery"
+              <h4>Statista</h4>
+              <p>I would have loved to use this site but my project budget wouldn't allow it</p>
+              <a href="static/assets/img/portfolio/statista.JPG" data-gallery="portfolioGallery"
                 class="portfolio-lightbox preview-link" title="Card 2"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <img src="static/assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Web 2</h4>
-              <p>Web</p>
-              <a href="assets/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery"
-                class="portfolio-lightbox preview-link" title="Web 2"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-            </div>
-          </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <img src="static\assets\img\portfolio\mapcapture.PNG" class="img-fluid" alt="">
@@ -451,37 +430,30 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="static/assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
+            <img src="static/assets/img/portfolio/data.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Card 1</h4>
-              <p>Card</p>
-              <a href="assets/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery"
+              <h4>Company Data</h4>
+              <p>As one might assume from large tech companies the data is out there but incripited. Selenium and
+                Chromedriver became my best friends</p>
+              <a href="assets/img/portfolio/data.jpg" data-gallery="portfolioGallery"
                 class="portfolio-lightbox preview-link" title="Card 1"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="static/assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
+            <img src="static/assets/img/portfolio/taxes.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Card 3</h4>
-              <p>Card</p>
-              <a href="assets/img/portfolio/portfolio-8.jpg" data-gallery="portfolioGallery"
+              <h4>Data Legitamcy</h4>
+              <p>I had to make sure that my Finacials were correct so I compared two sources together as well as
+                Statisa's 10-K forms to ensure the Finacials were within the same realm </p>
+              <a href="assets/img/portfolio/taxes.jpg" data-gallery="portfolioGallery"
                 class="portfolio-lightbox preview-link" title="Card 3"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <img src="static/assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Web 3</h4>
-              <p>Web</p>
-              <a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery"
-                class="portfolio-lightbox preview-link" title="Web 3"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-            </div>
-          </div>
+
 
         </div>
 
@@ -506,7 +478,7 @@
 
         <div class="row" data-aos="fade-up">
 
-
+          <!--
           <div class="col-lg-6">
             <form action="forms/contact.php" method="post" role="form" class="php-email-form">
               <div class="row">
@@ -534,7 +506,7 @@
 
         </div>
 
-      </div>
+      </div>-->
     </section><!-- End Contact Section -->
 
   </main><!-- End #main -->
