--- a/faangapp/templates/portfolio-details.html
+++ b/faangapp/templates/portfolio-details.html
@@ -81,6 +81,7 @@
               </li>
               <li><a href="/fbproph">Facebook Prophet</a></li>
               <li><a href="/dashboards">DashBoards</a></li>
+              <li><a href="/consensus">Consensus</a></li>
               <li><a href="#">Extra Content</a></li>
             </ul>
           </li>
