--- a/faangapp/templates/index.html
+++ b/faangapp/templates/index.html
@@ -111,7 +111,7 @@
   <section id="hero" class="d-flex align-items-center">
     <div class="container position-relative" data-aos="fade-up" data-aos-delay="500">
       <h1>Welcome to BaringFaang</h1>
-      <h2>A deep dive into the analtytics of 6 of the World's Biggest Tech Companies</h2>
+      <h2>A deep dive into the analytics of 6 of the World's Biggest Tech Companies</h2>
       <a href="#about" class="btn-get-started scrollto">Let's Get Started</a>
     </div>
   </section><!-- End Hero -->
