--- a/faangapp/templates/consensus.html
+++ b/faangapp/templates/consensus.html
@@ -140,7 +140,8 @@
                     employees is 2016</p><br>
                 <p>In terms of office to employee ratio: (<b>*DISCLAIMER! THIS IS A GENERALIZATION, I HAVE TAKEN INTO
                         ACCOUNT THAT OFFICE SIZINGS ARE NOT ALL EQUAL BUT THIS IS FOR THE SAKE OF
-                        SIMPLICITY* </b><em>Amazon:</em>Has around <b>5570</b> employees per it's <b>233</b> offices. It
+                        SIMPLICITY* </b><em>Amazon: </em>Has around <b>5570</b> employees per it's <b>233</b> offices.
+                    It
                     is important to note
                     that this also includes delivery drivers and general workers. <em>Apple</em> Has an average of
                     <b>5654 </b>
@@ -158,11 +159,19 @@
                     was actually a benefit. In the span of year <em>Amazon</em> rose <b>$1337.43 </b> or <b>72%</b>.
                     <em>Apple</em>
                     rose
-                    <b>$58.08</b> or <b>80%</b>. <em>Facebook</em> rose <b>$62.86</b> or <b></b>. <em>Google</em> rose
+                    <b>$58.08</b> or <b>80%</b>. <em>Facebook</em> rose <b>$62.86</b> or <b>32%</b>. <em>Google</em>
+                    rose
                     <b>$421.70</b> or <b>32%</b>
                     <em>Microsoft</em> rose <b>$64.82</b> or <b>42%</b>. and <em>Netflix</em> rose <b>$191.17</b> or
                     <b>59%</b>.
                 </p><br>
+                <h4>Jobs</h4>
+                <p>From most jobs avaialable to least jobs available. <b>(Please note these are only FULL TIME job
+                        oppertunities and does not count interneships, part time, or contracts</b> <em>Amazon</em> with
+                    <b>49705</b> jobs. <em>Microsoft</em> with <b>8019</b> jobs. <em>Google</em> with <b> 3591</b> jobs.
+                    <em>Facebook</em> with <b>3257</b> jobs. <em>Apple</em> with <b>645</b> jobs. <em>Netlix</em> with
+                    <b>506</b> jobs.
+                </p>
                 <h4>Future Use</h4>
                 <p> Continuing from where I have left off. I would like to perfect data structures so I will be able
                     to use my global map via Leafelt and Mapbox. I also would like include other companies that are now
