--- a/faangapp/templates/index.html
+++ b/faangapp/templates/index.html
@@ -96,6 +96,7 @@
               <li><a href="/fbproph">Facebook Prophet</a></li>
               <li><a href="/dashboards">DashBoards</a></li>
               <li><a href="/consensus">Consensus</a></li>
+              <li><a href="/video">Video</a></li>
               <li><a href="https://markrotil.github.io/matching/" target="_blank">Extra Content</a></li>
             </ul>
           </li>
